# softdesk_api_restful

./: README.md  pyproject.toml  requirements.txt
softdesk_api/: db.sqlite3
softdesk_api/comments/: models.py  permissions.py  serializers.py  views.py
softdesk_api/comments/migrations/: 0001_initial.py  0002_remove_comment_title_remove_comment_user_and_more.py  0003_comment_created_time_comment_uuid.py  0004_alter_comment_created_time.py  0005_comment_user.py  0006_remove_comment_user_comment_author.py
softdesk_api/issues/: models.py  permissions.py  serializers.py  views.py
softdesk_api/issues/migrations/: 0001_initial.py  0002_remove_issue_user_issue_assignee.py  0003_issue_priority_alter_issue_status_alter_issue_tag.py  0004_issue_created_time.py  0005_alter_issue_created_time.py  0006_issue_user.py  0007_rename_user_issue_author.py
softdesk_api/projects/: models.py  permission.py  permissions.py  serializers.py  views.py
softdesk_api/projects/migrations/: 0001_initial.py  0002_remove_project_time_created.py  0003_project_type.py  0004_rename_type_project_project_type.py  0005_project_created_time.py  0006_alter_project_created_time.py
softdesk_api/softdesk_api/: settings.py  urls.py
softdesk_api/users/: models.py  serializers.py  views.py
softdesk_api/users/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_customuser_is_contact_consent_given_and_more.py
